@startuml DiagramaDeClasses

class DefaultEntity{
    -id: Long
    -dataCadastro: Date
    -dataAtualizacao: Date
}
note bottom of DefaultEntity
  Todas as classes herdam
  de DefaultEntity
end note



enum CorPeca {
    +PRETO
    +BRANCO
}

class Material {
    -nome: String
}

class Peca {
    -diametroCm: double
    -alturaCm: double
}

enum TipoPeca {
    +REI
    +RAINHA
    +TORRE
    +BISPO
    +CAVALO
    +PEAO
}

class Tabuleiro {
    -tamanho: String
    <<adminOnly>>
    -estoqueDisponivel: int
    -custoProducao: BigDecimal
}

abstract class Relogio {
    -modelo: String
    -dimensoes: String
    <<adminOnly>>
    -estoqueDisponivel: int
    -custoProducao: BigDecimal
}

class RelogioDigital {
    -incremento: int
    -displayDuplo: boolean
    -temBuzzer: boolean
}
enum ModoTempo{
    FISCHER
    DELAY
    BRONSTEIN
    SIMPLES
}

class RelogioAnalogico {
    -temBandeira: boolean
    -necessitaPilha: boolean
}
enum Mecanismo{
    CORDA
    QUARTZ
}

class JogoXadrez{
    -nome: String
    -preco: BigDecimal
    -descricao: String
    <<adminOnly>>
    -estoqueDisponivel: int
    -custoProducao: BigDecimal
}

class KitPeca {
    -nome: String
    -preco: BigDecimal
    <<adminOnly>>
    -estoqueDisponivel: int
    -custoProducao: BigDecimal
}

class Fabricante {
    -nome: String
    <<adminOnly>>
    -cnpj: String
    -telefone: String
}

class ItemKit {
    -quantidade: int
}

'---------------- HERANCA ----------------
RelogioDigital --|> Relogio
RelogioAnalogico --|> Relogio




'---------------- COMPOSICAO ----------------

KitPeca "1" *--> "*" ItemKit


'---------------- AGREGACAO ----------------
ItemKit "*" o--> "1" Peca
JogoXadrez"*" o--> "1" Tabuleiro
JogoXadrez "*" o--> "1" KitPeca
JogoXadrez "*" o--> "0..1" Relogio

'---------------- ASSOCIACAO ----------------
Relogio "*" o--> "1" Fabricante
Tabuleiro "*" --> "1" Material
Peca "*" --> "1" Material
Peca "*" --> "1" TipoPeca
Peca "*" --> "1" CorPeca
RelogioDigital "*" --up> "*" ModoTempo
RelogioAnalogico "*" --up> "1" Mecanismo
KitPeca "*" o--> "1" Fabricante
Tabuleiro "*" o--> "1" Fabricante

@enduml
